--- a/Natours/starter/index.html
+++ b/Natours/starter/index.html
@@ -20,8 +20,11 @@
            <div class="text-box">
                 <h1 class="header-primary">
                     <span class="heading-primary-main">Outdoors</span>
-                <span class="heading-primary-sub">is where life happens</span>
+                    <span class="heading-primary-sub">is where life happens</span>
                 </h1>
+
+
+                <a href="#" class="btn btn-white btn-animated">Discover our Tours</a>
            </div>
        </header> 
     </body>
